# device-opcua-c

./: Attribution.txt  README.md
example-config/: ExampleProfile.yaml  configuration.toml
res/: configuration.toml
scripts/: Dockerfile.alpine-3.9  build.sh  build_deps.sh
src/: CMakeLists.txt
src/c/: CMakeLists.txt  main.c
